test-cases/negative/test_043_invalid_type_annotation.lay
# negative test: invalid type annotation
# expected: error should be thrown

the variable x of type InvalidType is 5


